cabal-version:      2.4
name:               chess
version:            0.1.0.0
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
extra-source-files: CHANGELOG.md

executable chess
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Attacks
        BitBoard
        Board
        Square

    default-language: Haskell2010
    build-depends:    base ^>=4.16.4.0,template-haskell
