cabal-version:      2.4
name:               chess
version:            0.1.0.0
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Attacks
        BitBoard
        Board
        Square
        Piece

    hs-source-dirs:   src
    other-modules:    Attacks.Internal
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        template-haskell
